--- a/ex30.html
+++ b/ex30.html
@@ -9,14 +9,11 @@
   .b {font-size : 2em; }
   .c {font-size : large; }
   .d {font-size: small; }
-  .myfont {font-family : Freehand591 BT; font-style : italic; text-align : center;}
-  .font_romannnnn {font-family : 'Mistral'; font-size : 44px; text-align: right }
-  .button {width : 150px; height : 70px; background-color: #FF8A090; border 10px solid #FFFFFF; border-radius : 30px; box-shadow: 5px 5px 5px #A9A9A9;}
-  .button > a {display : block; line-height : 70px;}
+  .myfont {font-family : Freehand591 BT; font-style : italic;}
+  .font_romannnnn {font-family : 'Mistral'; font-size : 44px; }
 </style>
 </head>
 <body>
-
   <h1 class="myfont">An acid is a molecule or ion capable of donating a hydron (proton or hydrogen ion H+), or, alternatively, capable of forming a covalent bond with an electron pair (a Lewis acid).[1]
 The first category of acids is the proton donors or Brønsted acids. In the special case of aqueous solutions, proton donors form the hydronium ion H3O+ and are known as Arrhenius acids. Brønsted and Lowry generalized the Arrhenius theory to include non-aqueous solvents. A Brønsted or Arrhenius acid usually contains a hydrogen atom bonded to a chemical structure that is still energetically favorable after loss of H+.</h1>
   <p class="font_romannnnn">exmaple example</p>
