--- a/특강/index.html
+++ b/특강/index.html
@@ -1,69 +1,92 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device">
-	<title></title>
 
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+<head>
+  <meta charset="utf-8">
+    <title>HTML4</title>
+    <style>
+    body {
+        font-family: Verdana, sans-serif;
+        font-size: 0.9em;
+    }
+
+    header,
+    footer {
+        padding: 10px;
+        color: white;
+        background-color: black;
+    }
+
+    section {
+        margin: 5px;
+        padding: 10px;
+        background-color: lightgrey;
+    }
+
+    section {
+        margin: 5px;
+        padding: 10px;
+        background-color: white;
+    }
+
+    nav ul {
+        padding: 0;
+    }
+
+    nav ul li {
+        display: inline;
+        margin: 5px;
+    }
+    </style>
 </head>
+
 <body>
 
-	<div id="wrap">
+    <header>
+        <h1>SUMIN'S SITE</h1>
+    </header>
+    <nav id="menu">
+        <ul>
+            <li>News</li>
+            <li>Sports</li>
+            <li>Weather</li>
+        </ul>
+    </nav>
 
-		<div id='header'>
-			header
-		</div>
+    <section>
+        <h2>COFFEE</h2>
+        <section>
+            <h2>Definition</h2>
+            <img src="img/coffee.jpg" width="100" height="100" alt="커피1" title="커피 1" /><br>
+            <p>Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain Coffea species. The genus Coffea is native to tropical Africa (specifically having its origin in Ethiopia and Sudan) and Madagascar, the Comoros, Mauritius, and Réunion in the Indian Ocean.[2] Coffee plants are now cultivated in over 70 countries, primarily in the equatorial regions of the Americas, Southeast Asia, Indian subcontinent, and Africa. The two most commonly grown are C. arabica and C. robusta. Once ripe, coffee berries are picked, processed, and dried. Dried coffee seeds (referred to as "beans") are roasted to varying degrees, depending on the desired flavor. Roasted beans are ground and then brewed with near-boiling water to produce the beverage known as coffee.</p>
+        </section>
+        <section>
+            <h2>Processing</h2>
+                <h3>Roasting</h3>
+                <p>The next step in the process is the roasting of the green coffee. Coffee is usually sold in a roasted state, and with rare exceptions all coffee is roasted before it is consumed. It can be sold roasted by the supplier, or it can be home roasted.[89] The roasting process influences the taste of the beverage by changing the coffee bean both physically and chemically. The bean decreases in weight as moisture is lost and increases in volume, causing it to become less dense. The density of the bean also influences the strength of the coffee and requirements for packaging.
 
-		<div id='main'>
-			<div id='left'>
-				<ul>
-					<li>
-						<a href="#projectA">project A</a>
-						<a href="#projectB">project B</a>
-						<a href="#projectC">project C</a>
-					</li>
-				</ul>
-			</div>
-			<div id='right'>
-				
-				<div id='projectA'>
-					<h1>Project A</h1>
-					<div class="content">
-						프로젝트 내용
-						<img src="http://placehold.it/600x800">
-					</div>
+The actual roasting begins when the temperature inside the bean reaches approximately 200 °C (392 °F), though different varieties of seeds differ in moisture and density and therefore roast at different rates.[90] During roasting, caramelization occurs as intense heat breaks down starches, changing them to simple sugars that begin to brown, which alters the color of the bean.[91]
 
-				</div>
+Sucrose is rapidly lost during the roasting process, and may disappear entirely in darker roasts. During roasting, aromatic oils and acids weaken, changing the flavor; at 205 °C (401 °F), other oils start to develop.[90] One of these oils, caffeol, is created at about 200 °C (392 °F), which is largely responsible for coffee's aroma and flavor.[23]
 
-				<div id='projectB'>
-					<h1>Project B</h1>
-					<div class="content">
-						프로젝트 내용
-						<img src="http://placehold.it/600x800">
-					</div>
+Roasting is the last step of processing the beans in their intact state. During this last treatment, while still in the bean state, more caffeine breaks down above 235 °C (455 °F). Dark roasting is the utmost step in bean processing removing the most caffeine. Although, dark roasting is not to be confused with the Decaffeination process.</p>
+                <h3>Grading roasted beans</h3>
+                <p>Depending on the color of the roasted beans as perceived by the human eye, they will be labeled as light, medium light, medium, medium dark, dark, or very dark. A more accurate method of discerning the degree of roast involves measuring the reflected light from roasted seeds illuminated with a light source in the near-infrared spectrum. This elaborate light meter uses a process known as spectroscopy to return a number that consistently indicates the roasted coffee's relative degree of roast or flavor development.</p>
+                <h3>Roast characteristics</h3>
+                <p>The degree of roast has an effect upon coffee flavor and body. Darker roasts are generally bolder because they have less fiber content and a more sugary flavor. Lighter roasts have a more complex and therefore perceived stronger flavor from aromatic oils and acids otherwise destroyed by longer roasting times.[92] Roasting does not alter the amount of caffeine in the bean, but does give less caffeine when the beans are measured by volume because the beans expand during roasting.[93]
 
-				</div>
+A small amount of chaff is produced during roasting from the skin left on the seed after processing.[94] Chaff is usually removed from the seeds by air movement, though a small amount is added to dark roast coffees to soak up oils on the seeds.</p>
+                <h3>Decaffeination</h3>
+                <p>Decaffeination of coffee seeds is done while the seeds are still green. Many methods can remove caffeine from coffee, but all involve either soaking the green seeds in hot water (often called the "Swiss water process")[95] or steaming them, then using a solvent to dissolve caffeine-containing oils.[23] Decaffeination is often done by processing companies, and the extracted caffeine is usually sold to the pharmaceutical industry.[23]</p>
+                <h3>Storage</h3>
+                <p>Coffee is best stored in an airtight container made of ceramic, glass or non-reactive metal.[96] Higher quality prepackaged coffee usually has a one-way valve which prevents air from entering while allowing the coffee to release gases.[97] Coffee freshness and flavor is preserved when it is stored away from moisture, heat, and light.[96] The ability of coffee to absorb strong smells from food means that it should be kept away from such smells.[96] Storage of coffee in refrigerators is not recommended due to the presence of moisture which can cause deterioration.[96] Exterior walls of buildings which face the sun may heat the interior of a home, and this heat may damage coffee stored near such a wall.[96] Heat from nearby ovens also harms stored coffee.[96]
 
-				<div id='projectC'>
-					<h1>Project C</h1>
-					<div class="content">
-						프로젝트 내용
-						<img src="http://placehold.it/600x800">
-					</div>
-
-				</div>
-			</div>
-		</div>
-
-		<div id='footer'>
-			footer
-		</div>
-
-	</div>
-
-	<div id="fix_top">
-		<a href="#">Top</a>
-	</div>
+In 1931, a method of packing coffee in a sealed vacuum in cans was introduced. The roasted coffee was packed and then 99% of the air was removed, allowing the coffee to be stored indefinitely until the can was opened. Today this method is in mass use for coffee in a large part of the world.[98]</p>
+        </section>
+    </section>
+    <footer>
+        <p>&copy; 2018 SUMIN'S SITE. All rights reserved.</p>
+    </div>
 </body>
+
 </html>
